# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2007-2018 ANSSI. All Rights Reserved.
dist_sbin_SCRIPTS =  init_usb_key.sh mount_usb.sh umount_usb.sh export_usb_keys.sh import_usb_keys.sh generate_usb_keys.sh mount_cdrom.sh umount_cdrom.sh clear_usb_key.sh generate_removable_conf.sh
datadir = /lib/clip
data_DATA = usb_storage.sub
EXTRA_DIST = usb_storage.sub
bindir = /lib/hotplug.d
dist_bin_SCRIPTS = usb_storage
