# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2007-2018 ANSSI. All Rights Reserved.
sbin_PROGRAMS = usbadmin
usbadmin_SOURCES = usbadmin.c usb.c usb.h
usbadmin_CPPFLAGS = -O -Wall -Wextra -Wcast-qual -Wstrict-prototypes -Werror -fno-common -DUSB_SOCK_BASE=\"/mounts/user_priv/var/run/usb\"
